--- a/package.json
+++ b/package.json
@@ -11,20 +11,27 @@
   "dependencies": {
     "@google/genai": "^1.3.0",
     "@google/generative-ai": "^0.24.1",
+    "@heroui/button": "^2.2.21",
+    "@radix-ui/react-slot": "^1.2.3",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
+    "class-variance-authority": "^0.7.1",
     "cloudinary": "^1.41.3",
+    "clsx": "^2.1.1",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.518.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
+    "ogl": "^1.0.11",
     "openai": "^5.0.1",
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
@@ -39,6 +46,7 @@
     "eslint-config-next": "15.2.4",
     "formidable": "^3.5.4",
     "tailwindcss": "^4",
+    "tw-animate-css": "^1.3.4",
     "typescript": "^5"
   }
 }
