--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "lucide-react": "^0.518.0",
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
+    "motion": "^12.18.1",
     "multer": "^2.0.0",
     "multer-storage-cloudinary": "^4.0.0",
     "next": "15.2.4",
