--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@google/generative-ai": "^0.24.1",
     "@heroui/button": "^2.2.21",
     "@radix-ui/react-slot": "^1.2.3",
+    "@react-three/fiber": "^9.2.0",
+    "@types/three": "^0.178.1",
     "axios": "^1.9.0",
     "bcryptjs": "^3.0.2",
     "class-variance-authority": "^0.7.1",
@@ -32,7 +34,8 @@
     "pdf-parse": "^1.1.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.3.1"
+    "tailwind-merge": "^3.3.1",
+    "three": "^0.178.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
